Fix search form width and z-index for logo/actions

--- a/public/assets/css/front.css
+++ b/public/assets/css/front.css
@@ -1044,7 +1044,13 @@ a [class*="far"] {
 
 .site-navbar.search-open .navbar-brand {
   position: relative;
-  z-index: 1052;
+  z-index: 1053;
+}
+
+.site-navbar.search-open .navbar-brand img,
+.site-navbar.search-open .navbar-brand span {
+  position: relative;
+  z-index: 1053;
 }
 
 .site-navbar.search-open #mainNav {
@@ -1056,11 +1062,13 @@ a [class*="far"] {
 .site-navbar.search-open #mainNav .theme-toggle-btn,
 .site-navbar.search-open #mainNav .btn-primary-custom {
   position: relative;
-  z-index: 1052;
+  z-index: 1053;
 }
 
-.site-navbar.search-open #mainNav .navbar-nav {
+.site-navbar.search-open #mainNav > ul {
   visibility: hidden;
+  position: absolute;
+  width: 100%;
 }
 
 .nav-search-form {
@@ -1068,7 +1076,7 @@ a [class*="far"] {
   align-items: center;
   width: 100%;
   height: 100%;
-  min-width: 200px;
+  max-width: 700px;
 }
 
 .nav-search-back {
